--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/editText"
+    <EditText
+        android:id="@+id/inputTextActivityMain"
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
